fixed content alignment

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -27,12 +27,13 @@ body {
    display: flex;
    font-family: 'Source Sans Pro', sans-serif;
    flex-direction: column;
-   align-content: center;
+   justify-content: center;
  }
 
  main {
    display: flex;
    width: 90%;
+   align-self: center;
  }
 
  
